index/partners: fix gap

--- a/src/views/Partners.scss
+++ b/src/views/Partners.scss
@@ -1,6 +1,7 @@
 @use "../utils/variables" as *;
 
 %partners {
+  display: flex;
   padding: 2rem;
   gap: 3rem;
   min-height: auto;
